[gd_scene load_steps=14 format=2]

[ext_resource path="res://scn/Main/main.gd" type="Script" id=1]
[ext_resource path="res://fonts/SEGOEUIB.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/SEGOEUI.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/SEGUIBL.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://scn/LogScreen/log_screen.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 11.0
content_margin_bottom = 11.0
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.141176, 0.705882, 0.494118, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 14.0
margin_right = -16.0
margin_bottom = -14.0
size_flags_horizontal = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainContainer"]
margin_right = 992.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.243137, 0.811765, 0.556863, 1 )
text = "My Task List"
align = 1
valign = 1

[node name="TaskContainer" type="ScrollContainer" parent="MainContainer"]
margin_top = 50.0
margin_right = 992.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 4 )

[node name="TaskList" type="VBoxContainer" parent="MainContainer/TaskContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 972.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="ErrorLbl" type="Label" parent="MainContainer"]
margin_top = 403.0
margin_right = 992.0
margin_bottom = 426.0
custom_colors/font_color = Color( 1, 0, 0.258824, 1 )
align = 1
autowrap = true

[node name="NewTask" type="VBoxContainer" parent="MainContainer"]
margin_top = 441.0
margin_right = 992.0
margin_bottom = 534.0
custom_constants/separation = 10

[node name="TaskText" type="TextEdit" parent="MainContainer/NewTask"]
margin_right = 992.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
smooth_scrolling = true
caret_blink = true

[node name="AddTaskBtn" type="Button" parent="MainContainer/NewTask"]
margin_left = 434.0
margin_top = 60.0
margin_right = 558.0
margin_bottom = 93.0
size_flags_horizontal = 4
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "+ Add Task"

[node name="UserContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 549.0
margin_right = 992.0
margin_bottom = 572.0

[node name="LogOut" type="LinkButton" parent="MainContainer/UserContainer"]
margin_right = 78.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.141176, 0.705882, 0.494118, 1 )
text = "‚Üê Log Out"
underline = 1

[node name="UserId" type="Label" parent="MainContainer/UserContainer"]
margin_left = 82.0
margin_right = 992.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.615686, 0.615686, 0.615686, 1 )
text = "user-id"
align = 2

[node name="LogScreen" parent="." instance=ExtResource( 5 )]

[node name="ErrorTimer" type="Timer" parent="."]
[connection signal="pressed" from="MainContainer/NewTask/AddTaskBtn" to="." method="_on_add_new_task"]
[connection signal="pressed" from="MainContainer/UserContainer/LogOut" to="." method="_on_LogOut_pressed"]
[connection signal="timeout" from="ErrorTimer" to="." method="_on_ErrorTimer_timeout"]
